# ai-factcheck-enterprise

./: .gitignore  CLAUDE.md  README.md
SPEC/: README.md
ai-service/: .env.example  .gitignore  main.py  pyproject.toml
ai-service/tests/: conftest.py  test_health.py
backend/: .dockerignore  .gitignore  Gemfile
backend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  puma.rb
backend/config/environments/: production.rb
backend/config/initializers/: cors.rb  required_env.rb
frontend/: .env.example  .eslintrc.json  .gitignore  README.md  jest.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx
