[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "AI Factcheck Enterprise - AI Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "langchain>=0.1.0",
    "langgraph>=1.0.0,<2.0.0",
    "langsmith>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-api-python-client>=2.100.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]
